✨Se agrega tiempo promedio de resolución de caso
