# app/Http/Controllers/Api/CaseController.php
@@ -227,4 +227,64 @@ class CaseController extends Controller
             return response()->json("500 Internal Server Error", 500);
         }
     }
+
+    /**
+     * Tiempo promedio resolución.
+     *
+     * @OA\Post(
+     *    path="/api/averageCaseTime",
+     *    summary="Get average resolution time",
+     *    description="Get average resolution time",
+     *    operationId="getAverageCaseTime",
+     *    tags={"auth"},
+     *    @OA\Response(
+     *       response=200,
+     *       description="Average case time",
+     *       @OA\JsonContent(
+     *          example=""
+     *       )
+     *    ),
+     *    @OA\Response(
+     *       response=401,
+     *       description="401 Unauthorized",
+     *       @OA\JsonContent(
+     *          example={"error":"Unauthorized"}
+     *       )
+     *    ),
+     *    @OA\Response(
+     *       response=500,
+     *       description="500 internal server error",
+     *       @OA\JsonContent(
+     *          example="500 internal server error"
+     *       )
+     *    ),
+     * )
+     * 
+     * @param  \Illuminate\Http\Request $request
+     * @return \Illuminate\Http\JsonResponse
+     */
+    public function getAverageCaseTime(Request $request)
+    {
+        $data = $this->getArchivedCasesData(
+            $request->cookie('JSESSIONID'),
+            $request->cookie('X-Bonita-API-Token')
+        );
+
+        $totalHours = 0;
+
+        foreach($data as $case){
+            $start = strtotime($case['start']);
+            $end = strtotime($case['end_date']);
+            //$end = strtotime((new DateTime('now'))->format('Y-m-d H:i:s')); // test
+            $totalHours += abs($end - $start)/(60*60);
+        }     
+
+        try {
+            return response()->json(
+                $totalHours / count($data)
+            );
+        } catch (ConnectionException $e) {
+            return response()->json("500 Internal Server Error", 500);
+        }
+    }
 }
